# spellcaster

./: .gitignore  requirements.txt
monorepo/bubble/: bubble.py  bubble_ui.py  zone.py
monorepo/bubble_py/: bubble_ui.py  nucleation.py  ui.py
monorepo/bubble_py/src/: bubble.py  bubble_parser.py  main.py  ocean.py
monorepo/bubble_rs/: Cargo.toml
monorepo/bubble_rs/rest_client/: requests.http
monorepo/bubble_rs/src/: bubble.rs  bubble_cache.rs  bubble_model.rs  cli.rs  controllers.rs  main.rs  payloads.rs  spellcaster.rs  storage.rs
monorepo/bubble_ui/: package.json
monorepo/bubble_ui/src/: App.tsx  TextBox.css  TextBox.tsx  bubble.css  bubble.html  bubble.ts  bubble.tsx
monorepo/bubble_ui_electron/src/components/: FileTree.js  NoteEditor.js  index.js
monorepo/nlp/src/: subject_recognition.ipynb
monorepo/nlp/src/legacy_spellcaster/: ui.py
monorepo/nlp/tests/: bubble_test.py
monorepo/nlp_ranking_py/: docker-compose.yml
monorepo/nlp_ranking_py/src/: vectorizer.py
monorepo/nlp_ranking_py/src/legacy_spellcaster/: bubble.py
monorepo/pdf_editor_ui/: index.html  main.js  package.json  renderer.js
monorepo/pdf_parsing_py/: docker-compose.yml  exploration.ipynb  main.py  pkmn_search.ipynb  pokemon_search.py
monorepo/spellcaster-editor/: package.json
monorepo/spellcaster-editor/src/: App.js
monorepo/spellcaster_cli_py/: cli.py  keyword_tagging.py  requirements.txt
