[package]
name = "bubble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tempfile = "3.2"
lazy_static = "1.4"

[[bin]]
name = "binary1"
path = "src/main.rs"

[[bin]]
name = "binary2"
path = "src/spellcaster.rs"